# GEMPICX

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  GEMPIC_Config.H  LICENSE  README.md  dependencies.txt  gempic_Config.H
Examples/BuildGEMPICXFetched/: CMakeLists.txt
Examples/BuildGEMPICXInstalled/: CMakeLists.txt  UseInstalledGEMPICX.cpp
Examples/QuasiNeutral/: CMakeLists.txt  QuasiNeutralSimulation.cpp  bernstein.input  landauIAW.input
Src/: CMakeLists.txt  GEMPICX.H  GEMPIC_AmrexInit.H  GEMPIC_ComputationalDomain.H  GEMPIC_ComputationalDomain.cpp  GEMPIC_Config.H  GEMPIC_Config.cpp
Src/AMR/: CMakeLists.txt  GEMPIC_AmrLevelInterface.H  GEMPIC_AmrLevelInterface.cpp
Src/FieldSolvers/: CMakeLists.txt  GEMPIC_Solvers.H
Src/Filter/: CMakeLists.txt  GEMPIC_BilinearFilter.H  GEMPIC_FFTFilter.cpp  GEMPIC_Filter.H  GEMPIC_Filter.cpp
Src/Forms/: CMakeLists.txt  GEMPIC_BoundaryConditions.H  GEMPIC_DeRhamComplex.H  GEMPIC_ExtDerivatives.cpp  GEMPIC_FieldMethods.H  GEMPIC_FieldMethods.cpp  GEMPIC_Fields.H  GEMPIC_Fields.cpp
Src/HyperbolicSolvers/: GEMPIC_FV.H  GEMPIC_PDE.H
Src/Io/: CMakeLists.txt  GEMPIC_HDF5Interface.H  GEMPIC_HDF5Interface.cpp
Src/Particle/: CMakeLists.txt  GEMPIC_Particle.H  GEMPIC_ParticleDataIndices.H  GEMPIC_ParticleGroups.H  GEMPIC_Sampler.H  GEMPIC_SobolSampler.H  GEMPIC_SobolSampler.cpp
Src/ParticleMeshCoupling/: GEMPIC_BSpline.H  GEMPIC_BSpline.wls  GEMPIC_ParticleMeshCoupling.H  GEMPIC_SplineClass.H
Src/TimeLoop/: CMakeLists.txt  GEMPIC_DiscreteTime.H  GEMPIC_DiscreteTime.cpp  GEMPIC_HsZigzag.H  GEMPIC_PlaceholderIO.H  GEMPIC_RungeKutta.H  GEMPIC_RungeKutta.cpp  GEMPIC_Splitting.H  GEMPIC_Splitting.cpp  GEMPIC_TimeStepper.H  GEMPIC_TimeStepper.cpp  GEMPIC_TimeStepperBase.H  GEMPIC_TimeStepperBase.cpp  GEMPIC_VlasovMaxwellSemiImplicitOperators.H
Src/Utils/: CMakeLists.txt  GEMPIC_Array.H  GEMPIC_Array4D.H  GEMPIC_Assertion.H  GEMPIC_FieldTools.H  GEMPIC_FunctionParse.H  GEMPIC_GempicNorm.H  GEMPIC_MatrixOperations.H  GEMPIC_Mpi.H  GEMPIC_NumTools.H  GEMPIC_NumTools.cpp  GEMPIC_NumericalIntegrationDifferentiation.H  GEMPIC_NumericalIntegrationDifferentiation.cpp  GEMPIC_ParticleUtils.H  GEMPIC_Verbosity.H  GEMPIC_Verbosity.cpp  GEMPIC_Version.H  GEMPIC_Version.cpp
Testing/: CMakeLists.txt  ComputationalDomain_test.cpp  GEMPIC_UnitTests.cpp  utest_main.cpp
Testing/AMR/: CMakeLists.txt  LevelInterface_test.cpp
Testing/Examples/: CMakeLists.txt
Testing/FieldSolvers/: CMakeLists.txt  HypreNonperiodicPoissonSolver_test.cpp  HyprePoissonSolver_test.cpp  HypreQuasineutralAPoisson_test.cpp  HypreQuasineutralChargeMatrix_test.cpp  HypreQuasineutralCurlCurl_test.cpp  HypreQuasineutralCurlCurlplusChargeMatrix_test.cpp  HypreQuasineutralDivGradPhiMatrix_test.cpp  HypreQuasineutralFullQNMatrix_test.cpp  HypreQuasineutralJcrossCurl_test.cpp  HypreQuasineutralSobolDivJCurlB_test.cpp  MaxwellFDSolver_test.cpp  PoissonSolver_test.cpp
Testing/Filter/: CMakeLists.txt  Filter_test.cpp
Testing/Forms/: BoundaryConditions_test.cpp  CMakeLists.txt  DeRhamComplexMFSplit_test.cpp  EvalForm_test.cpp  ExtDerivatives_test.cpp  FDDeRhamComplexProjection_test.cpp  FDDeRhamComplex_test.cpp  FDHodgeDegreeExtrapolation_test.cpp  FDHodgeDegree_test.cpp  FieldMultiplyByFunction_test.cpp  FieldMultiplyByMatrix_test.cpp  Fields_test.cpp  GDEC_test.cpp  PolynomialReconstruction_test.cpp  ProjectionForms_test.cpp
Testing/InputFiles/: ParametersOutput_test.input  amrex_gtest.input  fulldiag_gtest.input
Testing/Io/: CMakeLists.txt  FullDiagnostics_test.cpp  ParametersOutput_test.cmake  ParametersOutput_test.cpp  Parameters_test.cpp  ReducedDiagnostics_test.cpp
Testing/Particle/: CMakeLists.txt  ParticleAdd_test.cmake  ParticleAdd_test.cpp  ParticleIO_test.cpp  ParticleIterator_test.cpp  ReadParticles.py  RelativisticDistribution.py  Sampler_test.cpp
Testing/ParticleMeshCoupling/: AccumulateJIntegrateB_test.cpp  BSpline_test.cpp  CMakeLists.txt  DepositCurlJEdge_test.cpp  DepositCurlJ_test.cpp  DepositDelDotS_test.cpp  DepositJ_test.cpp  DepositJcrossB_test.cpp  DepositRhoE_test.cpp  DepositRho_test.cpp  EvaluateBField_test.cpp  EvaluateEField_test.cpp  SplineBase_test.cpp  SplineWithPrimitive_test.cpp
Testing/TestUtils/: CMakeLists.txt  GEMPIC_AmrexTestEnv.H  GEMPIC_TestUtils.H  GEMPIC_TestUtils.cpp
Testing/TimeLoop/: CMakeLists.txt  GEMPIC_TestRealValue.H  HsZigzag_test.cpp  OperatorHamilton_test.cpp  RKButcherTableau_test.cpp  RungeKutta_test.cpp  SimulationTime_test.cpp  SplittingColdPlasma_test.cpp  TimeLoopOrder_test.cpp  TimeLoop_test.cpp  TimeStepperBase_test.cpp  TimeStepper_test.cpp
Testing/Utils/: CMakeLists.txt  GEMPIC_TestGaussQuadratureUnit.cpp  GEMPIC_TestNumericalIntegrationDifferentiation.cpp
Testing/filter/: CMakeLists.txt  filter_test.cpp
Testing/forms/: CMakeLists.txt  FDDeRhamComplex_test.cpp
Testing/io/: CMakeLists.txt  FullDiagnostics_test.cpp  parameters_test.cpp  reducedDiagnostics_test.cpp
Testing/particle_mesh_coupling/: CMakeLists.txt  SplineBase_test.cpp  SplineWithPrimitive_test.cpp  accumulate_J_integrate_B_test.cpp  accumulate_j_update_v_C2_test.cpp  accumulate_j_update_v_test.cpp  deposit_rho_new_spline_test.cpp  deposit_rho_test.cc  deposit_rho_test.cpp  e_field_scaling_test.cpp  evaluate_bfield_test.cpp  evaluate_efield_test.cpp  push_v_efield_test.cpp  spline_test.cpp
Testing/test_utils/: AmrexTestEnv.H  CMakeLists.txt  GEMPIC_test_utils.H  GEMPIC_test_utils.cpp
Testing/time_loops/: CMakeLists.txt  hs_zigzag_test.cpp  operatorHamilton_test.cpp  splitting_parent_class_test.cpp
doc/: CMakeLists.txt  Config.rst  Doxyfile  callSphinxDuplicateNamespaceWarningSilenced.py  conf.py  downloadAndExtractGraphics.py  index.rst  local_doc_script_linux.sh  local_doc_script_macos.zsh
doc/FieldSolvers/: FieldSolvers.rst  FieldSolversDoxygen.rst
doc/Filter/: Filter.rst  FilterDoxygen.rst
doc/ForDevelopers/: ForDevelopers.rst
simulations/: CMakeLists.txt  PIC.cpp  README.txt  sample.input
testing/: CMakeLists.txt  GEMPIC_UnitTests.cpp
(+1228 files in other folders)
